@@ -1,3 +1,4 @@
+	* improve handling of filenames that are invalid on windows
 	* support 'implied_port' in DHT announce_peer
 	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)
 
